# python_basics

./: README.md  pyproject.toml  requirements.txt
Basics/: classes.py
Basics/functions/: app.py
Basics/lists/: app.py  tuples.py
Basics/stringsAndNumbers/: mad_libs.py
alg/: two_sum.py
projects/: hangman.py
projects/dice-simulator/: dice-simulator.py
projects/number-guessing-game/: number-guessing-game.py
projects/website-checker/: main.py
src/Basics/: booleans.py  enumerate.py  functools.py  loop.py
src/Basics/functions/: app.py
src/Basics/lists/: app.py  dicts.py  sets.py
src/Basics/modules/: greetings.py  main.py
src/Basics/stringsAndNumbers/: basic_calculator.py  variables.py
src/alg/: contains_duplicates.py  is_prime.py  two_sum.py  unique_char.py  valid_parathesis.py
src/projects/: hangman.py  password_generator.py  qr_code_generator.py
src/projects/dice-simulator/: dice-simulator.py
src/projects/mad-libs/: mad-libs.py
src/projects/url-shortener/: url_shorterner.py
src/projects/website-checker/: websites.csv
